welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:71: error: not found: value grawSubFlowers
  grawSubFlowers()
  ^